Make sure it looks good on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -98,7 +98,13 @@ p {
     text-align: center;
   }
 
-  .dm.sm-block {
-    display: block !important;
+  p {
+    text-align: center;
+  }
+
+  .project-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
   }
 }
